@@ -1,14 +1,14 @@
 [Closed Files]
-File_0=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\MenuUnit.pas',0,1,8417,56,8427,0,0
-File_1=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\uSalePurchDelete.pas',0,1,45,53,67,0,0
-File_2=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\MenuUnit.pas',0,1,15158,80,15178,0,0
-File_3=SourceModule,'C:\Kingswood\Delphi Development\Common\Win7.pas',0,1,1,35,18,0,0
-File_4=SourceModule,'c:\program files (x86)\borland\delphi5\Source\Rtl\Sys\sysutils.pas',0,1,287,1,466,0,0
-File_5=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\GenTypesConst.pas',0,1,1566,4,1586,0,0
-File_6=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\DairyData.pas',0,1,5407,1,5444,1,0
-File_7=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\Changes.txt',0,1,1,1,9,0,0
-File_8=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\SetUpAnimals.pas',0,1,139,1,160,1,0
-File_9=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\uUpdateTables.pas',0,1,3807,34,3827,0,0
+File_0=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\Changes.txt',0,1,1,1,1,0,0
+File_1=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\uSystem.pas',0,1,1,1,7,1,0
+File_2=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\MenuUnit.pas',0,1,8417,56,8427,0,0
+File_3=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\uSalePurchDelete.pas',0,1,45,53,67,0,0
+File_4=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\MenuUnit.pas',0,1,15158,80,15178,0,0
+File_5=SourceModule,'C:\Kingswood\Delphi Development\Common\Win7.pas',0,1,1,35,18,0,0
+File_6=SourceModule,'c:\program files (x86)\borland\delphi5\Source\Rtl\Sys\sysutils.pas',0,1,287,1,466,0,0
+File_7=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\GenTypesConst.pas',0,1,1566,4,1586,0,0
+File_8=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\DairyData.pas',0,1,5407,1,5444,1,0
+File_9=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\Changes.txt',0,1,1,1,9,0,0
 
 [Modules]
 Module0=C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\DairyData.pas
@@ -37,10 +37,6 @@ FormState=0
 FormOnTop=0
 
 [C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\WinHerd.todo]
-FormState=0
-FormOnTop=0
-
-[C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\uImageStore.pas]
 FormState=0
 FormOnTop=0
 
@@ -321,28 +317,28 @@ State=0
 Left=0
 Top=12
 Width=140
-Height=740
+Height=736
 MaxLeft=-1
 MaxTop=-1
 ClientWidth=140
-ClientHeight=740
+ClientHeight=736
 TBDockHeight=305
 LRDockWidth=140
 Dockable=1
 
 [MessageView@EditWindow0]
 Create=1
-Visible=1
+Visible=0
 State=0
 Left=0
 Top=0
-Width=1705
+Width=1689
 Height=111
 MaxLeft=-1
 MaxTop=-1
-ClientWidth=1705
+ClientWidth=1689
 ClientHeight=111
-TBDockHeight=111
+TBDockHeight=140
 LRDockWidth=443
 Dockable=1
 
@@ -366,7 +362,7 @@ TBDockHeight=140
 LRDockWidth=1027
 Dockable=1
 TabPosition=0
-ActiveTab=Messages
+ActiveTab=Call Stack
 TabDockClients=BreakpointWindow,WatchWindow,DebugLogView,LocalVarsWindow,ModuleWindow,CallStackWindow,MessageView@EditWindow0
 
 [DockSite1]
