@@ -1,21 +1,33 @@
 [Closed Files]
-File_0=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\MenuUnit.pas',0,1,15158,80,15178,0,0
-File_1=SourceModule,'C:\Kingswood\Delphi Development\Common\Win7.pas',0,1,1,35,18,0,0
-File_2=SourceModule,'c:\program files (x86)\borland\delphi5\Source\Rtl\Sys\sysutils.pas',0,1,287,1,466,0,0
-File_3=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\GenTypesConst.pas',0,1,1566,4,1586,0,0
-File_4=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\DairyData.pas',0,1,5407,1,5444,1,0
-File_5=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\Changes.txt',0,1,1,1,9,0,0
-File_6=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\SetUpAnimals.pas',0,1,139,1,160,1,0
-File_7=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\uUpdateTables.pas',0,1,3807,34,3827,0,0
-File_8=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\Reports\ActionReminderFilt.pas',0,1,3025,28,3045,1,0
-File_9=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\uNutrientProductionProjectionRptScr.pas',0,1,2202,28,2222,1,0
+File_0=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\Changes.txt',0,1,1,1,1,0,0
+File_1=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\uSystem.pas',0,1,1,1,7,1,0
+File_2=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\MenuUnit.pas',0,1,8417,56,8427,0,0
+File_3=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\uSalePurchDelete.pas',0,1,45,53,67,0,0
+File_4=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\MenuUnit.pas',0,1,15158,80,15178,0,0
+File_5=SourceModule,'C:\Kingswood\Delphi Development\Common\Win7.pas',0,1,1,35,18,0,0
+File_6=SourceModule,'c:\program files (x86)\borland\delphi5\Source\Rtl\Sys\sysutils.pas',0,1,287,1,466,0,0
+File_7=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\GenTypesConst.pas',0,1,1566,4,1586,0,0
+File_8=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\DairyData.pas',0,1,5407,1,5444,1,0
+File_9=SourceModule,'C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\Changes.txt',0,1,1,1,9,0,0
 
 [Modules]
-Module0=C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\WinHerd.dpr
-Count=1
+Module0=C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\DairyData.pas
+Module1=C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\WinHerd.dpr
+Module2=C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\uHerdSync.pas
+Count=3
 EditWindowCount=1
 
-[C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\WinHerd.dpr]
+[C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\DairyData.pas]
+ModuleType=SourceModule
+FormState=0
+FormOnTop=0
+
+[C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\WinHerd.dpr]
+ModuleType=SourceModule
+FormState=0
+FormOnTop=0
+
+[C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\uHerdSync.pas]
 ModuleType=SourceModule
 FormState=0
 FormOnTop=0
@@ -24,14 +36,16 @@ FormOnTop=0
 FormState=0
 FormOnTop=0
 
-[C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\WinHerd.todo]
+[C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\WinHerd.todo]
 FormState=0
 FormOnTop=0
 
 [EditWindow0]
-ViewCount=1
-CurrentView=0
+ViewCount=3
+CurrentView=2
 View0=0
+View1=1
+View2=2
 CodeExplorer=CodeExplorer@EditWindow0
 MessageView=MessageView@EditWindow0
 Create=1
@@ -54,10 +68,24 @@ BottomPanelClients=DockSite0
 BottomPanelData=0000040000000000BD06000000000000028C000000000000000100000000BD06000009000000446F636B5369746530FFFFFFFF
 
 [View0]
-Module=C:\Kingswood\Delphi Development\Delphi 5\Herd\Test\WinHerd.dpr
-CursorX=1
-CursorY=1
+Module=C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\WinHerd.dpr
+CursorX=48
+CursorY=21
 TopLine=1
+LeftCol=1
+
+[View1]
+Module=C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\uHerdSync.pas
+CursorX=1
+CursorY=9714
+TopLine=9706
+LeftCol=1
+
+[View2]
+Module=C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\DairyData.pas
+CursorX=1
+CursorY=22158
+TopLine=22122
 LeftCol=1
 
 [Watches]
@@ -65,7 +93,9 @@ Count=1
 Watch0='HerdSync.FSyncDataQuery.FieldByName(''EventType'').AsInteger',256,0,18,1,0
 
 [Breakpoints]
-Count=0
+Count=2
+Breakpoint0='C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\uHerdSync.pas',4578,'',0,1,'',1,0,0,'',1,'','',''
+Breakpoint1='C:\Kingswood\Delphi Development\Delphi 5\Herd\Source\winherd\DairyData.pas',22135,'',0,1,'',1,0,0,'',1,'','',''
 
 [AddressBreakpoints]
 Count=0
@@ -148,7 +178,7 @@ LRDockWidth=219
 Dockable=1
 SplitPos=85
 ArrangeBy=Name
-SelectedItem=
+SelectedItem=Name
 ExpandedItems=DataBinding,Font.Style,LookAndFeel,OptionsView,Properties,Properties.ValueChecked,Properties.ValueGrayed,Properties.ValueUnchecked
 HiddenCategories=Legacy
 ShowStatusBar=1
@@ -302,13 +332,13 @@ Visible=0
 State=0
 Left=0
 Top=0
-Width=1705
+Width=1689
 Height=111
 MaxLeft=-1
 MaxTop=-1
-ClientWidth=1705
+ClientWidth=1689
 ClientHeight=111
-TBDockHeight=111
+TBDockHeight=140
 LRDockWidth=443
 Dockable=1
 
